--- a/src/renderer/src/pages/StudentDetailsPage.css
+++ b/src/renderer/src/pages/StudentDetailsPage.css
@@ -49,7 +49,7 @@
   font-size: 2.5rem;
   color: #3b82f6;
   background: #eff6ff;
-  padding: 1rem;
+  padding: 10px;
   border-radius: 0.75rem;
 }
 
